fix chatbot header spacing

--- a/css/components/_buttons-js-components.scss
+++ b/css/components/_buttons-js-components.scss
@@ -42,6 +42,10 @@
 /*********** disable landing page while working ***********/
 /*********** disable landing page while working ***********/
 
+/* center toggle button hamburger menu */
+.toggle-btn {
+    display: flex;
+}
 
 /* tech stack section card buttons */
 .tech-stack .card a {
