--- a/css/styles.css
+++ b/css/styles.css
@@ -837,6 +837,11 @@ h3 {
 /*********** disable landing page while working ***********/
 /*********** disable landing page while working ***********/
 /*********** disable landing page while working ***********/
+/* center toggle button hamburger menu */
+.toggle-btn {
+  display: flex;
+}
+
 /* tech stack section card buttons */
 .tech-stack .card a {
   color: var(--headings);
